test/fixtures/typecheck/pass/T7.kite
module T7

length : [a] -> Int
length = [] -> 0
         (x :: xs) -> 1 + (length xs)
