test/fixtures/typecheck/fail/UnknownDataType.kite
module UnknownDataType

fromMaybe : Maybe a -> a -> a
fromMaybe = (Just x) _ -> x
            _        y -> y
